<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.cisco-open.app</groupId>
    <artifactId>nio-tcp-java</artifactId>
    <version>1.0-SNAPSHOT</version>

    <profiles>
        <profile>
            <id>os-darwin</id>
            <activation>
                <property>
                    <name>os.name</name>
                    <value>Mac OS X</value>
                </property>
            </activation>

            <properties>
                <nasp.os>darwin</nasp.os>
            </properties>
        </profile>
        <profile>
            <id>os-linux</id>
            <activation>
                <property>
                    <name>os.name</name>
                    <value>Linux</value>
                </property>
            </activation>

            <properties>
                <nasp.os>linux</nasp.os>
            </properties>
        </profile>
    </profiles>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
<!--        <repository>-->
<!--            <id>github-nasp</id>-->
<!--            <url>https://maven.pkg.github.com/cisco-open/nasp</url>-->
<!--            <snapshots>-->
<!--                <enabled>true</enabled>-->
<!--            </snapshots>-->
<!--        </repository>-->
            <repository>
                <id>repo</id>
                <url>file://${basedir}/../../repo</url>
            </repository>
    </repositories>
    <dependencies>
<!--        <dependency>-->
<!--            <groupId>com.cisco.nasp</groupId>-->
<!--            <artifactId>nasp</artifactId>-->
<!--            <version>2.0-SNAPSHOT</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>nasp</groupId>
            <artifactId>nasp</artifactId>
            <version>0.0.0</version>
            <classifier>${nasp.os}</classifier>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <artifactSet>
                        <includes>
                            <include>nasp:nasp:${nasp.os}</include>
                        </includes>
                    </artifactSet>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>github-nasp</id>
            <name>GitHub Nasp Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/cisco-open/nasp</url>
        </repository>
    </distributionManagement>

</project>